# clipboardwire

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  MANUAL_SMOKE.md  PROTOCOL.md  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: bump-homebrew.yml  ci.yml  docker.yml  release.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/java/com/davefx/clipboardwire/: ClipboardSyncServiceTest.kt  MainActivityTest.kt  ServerIntegrationTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/davefx/clipboardwire/: MainActivity.kt
android/app/src/main/java/com/davefx/clipboardwire/service/: BootReceiver.kt  ClipboardSyncService.kt  Protocol.kt  Settings.kt  WebSocketHandler.kt
android/app/src/main/java/com/davefx/clipboardwire/ui/: Theme.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
android/app/src/test/java/com/davefx/clipboardwire/service/: MultiClientRelayTest.kt
cli/: Cargo.toml
cli/src/: autostart_win.rs  instance.rs  main.rs  settings.rs  tray.rs
cli/tests/: hub_mode.rs  singleton_lock.rs  tray_dbus_linux.rs  tray_smoke.rs  tray_uia_windows.rs
cli/wix/: License.rtf  main.wxs
core/: Cargo.toml
core/src/: lib.rs  protocol.rs
core/src/client/: config.rs  files_clipboard.rs  mod.rs  tls.rs  transport.rs
core/src/server/: auth.rs  config.rs  hub.rs  mod.rs  ws.rs
core/tests/: client_e2e.rs  clipboard_files_roundtrip.rs  end_to_end.rs  file_transfer.rs
packaging/: clipboardwire-autostart.desktop  clipboardwire.desktop  clipboardwire.env.example
packaging/arch/: PKGBUILD
packaging/systemd/: clipboardwire.service
scripts/: release.sh
tools/: wine-test-runner.sh
