[workspace]
resolver = "2"
members = ["core", "cli"]

[workspace.package]
version = "0.4.2"
edition = "2021"
license = "GPL-3.0-or-later"
rust-version = "1.89"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
