[package]
name = "clipboardwire"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Clipboard-sync hub and client over WebSocket"
homepage = "https://github.com/davefx/clipboardwire"
repository = "https://github.com/davefx/clipboardwire"

[[bin]]
name = "clipboardwire"
path = "src/main.rs"

[dependencies]
clipboardwire-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
anyhow = { workspace = true }
tray-icon = "0.22"
tao = "0.34"
eframe = { version = "0.32", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
toml = "0.9"
serde = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
dark-light = "2"
# Sync rustls + sha2 for the Settings dialog's "Pin from server" button.
# We use the same crypto provider as the core transport.
rustls = "0.23"
base64 = "0.22"
sha2 = "0.10"

[dev-dependencies]
egui_kittest = { version = "0.32", features = ["eframe"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
zbus = { version = "5", features = ["tokio"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[target.'cfg(windows)'.dev-dependencies]
# UI Automation client for the cross-platform tray-interaction harness.
# Runs under wine + xvfb when the test is invoked through the Cargo
# runner in `.cargo/config.toml`.
uiautomation = "0.16"

# -- Native packaging metadata --
# Build .deb:  cargo install cargo-deb && cargo deb -p clipboardwire
# Build .rpm:  cargo install cargo-generate-rpm && cargo generate-rpm -p clipboardwire

[package.metadata.deb]
maintainer = "davefx <davefx@gmail.com>"
copyright = "2026, davefx <davefx@gmail.com>"
license-file = ["../LICENSE", "0"]
extended-description = """\
clipboardwire is a small clipboard-sync hub and client that relays clipboard
contents between trusted devices on a LAN or VPN. The `serve` subcommand acts
as the hub; `clipboardwire connect` joins it as a client."""
section = "net"
priority = "optional"
depends = "$auto, systemd"
assets = [
    ["target/release/clipboardwire", "usr/bin/", "755"],
    ["../packaging/systemd/clipboardwire.service", "lib/systemd/system/", "644"],
    ["../packaging/clipboardwire.env.example", "etc/clipboardwire/clipboardwire.env.example", "644"],
    ["../packaging/clipboardwire.desktop", "usr/share/applications/clipboardwire.desktop", "644"],
    ["../packaging/clipboardwire-autostart.desktop", "etc/xdg/autostart/clipboardwire.desktop", "644"],
    ["../assets/icon-256.png", "usr/share/icons/hicolor/256x256/apps/clipboardwire.png", "644"],
    ["../README.md", "usr/share/doc/clipboardwire/README.md", "644"],
    ["../PROTOCOL.md", "usr/share/doc/clipboardwire/PROTOCOL.md", "644"],
]

[package.metadata.generate-rpm]
summary = "Clipboard-sync hub and client over WebSocket"
license = "GPL-3.0-or-later"
url = "https://github.com/davefx/clipboardwire"
assets = [
    { source = "target/release/clipboardwire", dest = "/usr/bin/clipboardwire", mode = "755" },
    { source = "packaging/systemd/clipboardwire.service", dest = "/usr/lib/systemd/system/clipboardwire.service", mode = "644" },
    { source = "packaging/clipboardwire.env.example", dest = "/etc/clipboardwire/clipboardwire.env.example", mode = "644" },
    { source = "packaging/clipboardwire.desktop", dest = "/usr/share/applications/clipboardwire.desktop", mode = "644" },
    { source = "packaging/clipboardwire-autostart.desktop", dest = "/etc/xdg/autostart/clipboardwire.desktop", mode = "644" },
    { source = "assets/icon-256.png", dest = "/usr/share/icons/hicolor/256x256/apps/clipboardwire.png", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/clipboardwire/README.md", mode = "644", doc = true },
    { source = "PROTOCOL.md", dest = "/usr/share/doc/clipboardwire/PROTOCOL.md", mode = "644", doc = true },
    { source = "LICENSE", dest = "/usr/share/licenses/clipboardwire/LICENSE", mode = "644" },
]
[package.metadata.generate-rpm.requires]
systemd = "*"
gtk3 = "*"
libayatana-appindicator-gtk3 = "*"
libxdo = "*"
