[package]
name = "clipboardwire-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

base64 = "0.22"
subtle = "2"
axum = { version = "0.8", features = ["macros", "ws"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio-tungstenite = "0.29"
