[package]
name = "clipboardwire-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

base64 = "0.22"
subtle = "2"
axum = { version = "0.8", features = ["macros", "ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }
sha2 = "0.10"
hostname = "0.4"

# client-side
toml = "0.9"
directories = "6"
arboard = { version = "3", default-features = false, features = ["image-data"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
http = "1"
blake3 = "1"
webpki-roots = "1"
image = { version = "0.25", default-features = false, features = ["png"] }

# File-clipboard adapter: arboard doesn't expose the text/uri-list
# selection target, so we run a parallel X11 clipboard owner on
# Linux. Conditional dep because Windows + macOS handle files via
# their own native APIs.
[target.'cfg(target_os = "linux")'.dependencies]
x11-clipboard = "0.9"

[target.'cfg(windows)'.dependencies]
clipboard-win = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "NSPasteboard",
] }
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSArray",
    "NSObject",
    "NSString",
    "NSURL",
] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio-tungstenite = "0.29"
